--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,3 +8,4 @@ Description: Created primarily to process qPCR Cq data for graphical output. How
 License: AGPL-3
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 7.2.0
